Product Bundle: fix layout issues

--- a/admin/client/css/main.css
+++ b/admin/client/css/main.css
@@ -1377,6 +1377,9 @@ table .s-edit-elements a:hover {
   text-align: left;
   padding-bottom: 3px;
 }
+.s-options .tab-content h4 button.s-button-no-style:hover {
+  text-decoration: underline;
+}
 .s-options .tab-pane .dl-horizontal {
   text-align: left;
 }
@@ -2574,6 +2577,9 @@ tabel .s-table-header {
 .s-bundle-group .s-bundle-group-item .s-bundle-group-dropdown-content .s-bundle-group-items {
   margin-bottom: 10px;
   margin-top: 50px;
+}
+.s-bundle-group .s-bundle-group-item .s-bundle-group-dropdown-content .s-bundle-group-items .s-title button:focus {
+  outline: none;
 }
 .s-bundle-group .s-bundle-group-item .s-bundle-group-dropdown-content .s-bundle-group-items .s-title a {
   font-size: 11px;
